K8s/platforms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template: 
    metadata:
      labels:
        app: platformservice
    spec: 
      containers:
        - name: platformservice
          image: jaugustodev/platformservice:latest
