K8s/commands-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template: 
    metadata:
      labels:
        app: commandservice
    spec: 
      containers:
        - name: commandservice
          image: jaugustodev/commandsservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: command-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
  - name: commandservice
    port: 80
    targetPort: 80
    protocol: TCP
