K8s/mssql-platform-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template: 
    metadata:
      labels:
        app: mssql
    spec: 
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: "/var/opt/mssql"
            name: mssqldb
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
            claimName: mssql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
  - name: mssql
    port: 1433
    targetPort: 1433
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  selector:
    app: mssql
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
