K8s/rabbitmq-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 15672
              name: rabbitmq-mgm
            - containerPort: 5672
              name: rabbitmq-mgg
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq-mgm
      port: 15672
      targetPort: 15672
      protocol: TCP
    - name: rabbitmq-mgg
      port: 5672
      targetPort: 5672
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  selector:
    app: rabbitmq
  type: LoadBalancer
  ports:
    - name: rabbitmq-mgm
      port: 15672
      targetPort: 15672
      protocol: TCP
    - name: rabbitmq-mgg
      port: 5672
      targetPort: 5672
      protocol: TCP
